[package]
name = "taskflow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "2.0.18"
async-trait = "0.1.89"
taskflow-macros = { path = "./taskflow-macros" }