[workspace]
members = [
    "taskflow-macros",
    "taskflow-build",
    "tf-examples",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
figment = { version = "0.10.19", features = ["toml", "json", "env"] }
inventory = "0.3.24"
taskflow-macros = { path = "taskflow-macros", version = "0.1.0" }
taskflow-build = { path = "taskflow-build", version = "0.1.0" }

[package]
name = "taskflow"
version = "0.1.0"
edition = "2024"
description = "A type-safe async DAG task flow framework"
license = "MIT"
repository = "https://github.com/ShYYYY1/rusty-taskflow"
readme = "README.md"
keywords = ["async", "dag", "taskflow"]
categories = ["concurrency"]

[dependencies]
taskflow-macros = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }


